Fixed bug where goals were not showing up in table

--- a/src/app/cards/table/table.component.html
+++ b/src/app/cards/table/table.component.html
@@ -23,7 +23,7 @@
           <img
             src="{{ 'assets/teams/' + shot.awayTeam + '.png' }}"
             class="logo" />
-          {{ shot.away_goals }}-{{ shot.home_goals }}
+          {{ shot.awayGoals }}-{{ shot.homeGoals }}
           <img
             src="{{ 'assets/teams/' + shot.homeTeam + '.png' }}"
             class="logo" />
