--- a/src/app/cards/shots/shots.component.css
+++ b/src/app/cards/shots/shots.component.css
@@ -1,45 +1,25 @@
-.shot-markers {
-  position: absolute;
-  width: inherit;
-  height: inherit;
-  z-index: 2;
-}
-
-.shot-marker {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  transition: transform 0.3s ease;
-  transform: scale(1);
-  z-index: 2;
-}
-
-.shot-marker:hover {
-  cursor: pointer;
-}
-
-.shot-marker:hover::after {
-  opacity: 0.2;
-}
-
-.rink-container {
+.segmented-button {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  margin: 5px;
+  gap: 5px;
 }
 
-.shots-and-canvas {
-  /* this is hardcoded to the size of the rink image */
-  width: 292px;
-  height: 292px;
+.top-toggles {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 5px;
 }
 
-.canvas {
-  position: absolute;
-  width: inherit;
-  height: inherit;
-  z-index: 1;
+.mat-button-toggle {
+  border: var(--borderColor);
+  color: var(--bgColor);
+  padding: 0px 5px;
+}
+
+.mat-button-toggle-checked {
+  background-color: var(--releaseNotesColor);
+  color: var(--textColor);
 }
