Added most recent data

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -101,7 +101,7 @@
                   {{ season }} NHL Percentile Statistics
                 </mat-card-title>
                 <mat-card-subtitle class="text-center">
-                  Updated on (10/29/24, 12:10pm EST)
+                  Updated on (11/03/24, 9:53am EST)
                 </mat-card-subtitle>
 
                 <div class="timeline-container">
