updated data sources

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -102,7 +102,7 @@
                   {{ season }} NHL Percentile Statistics
                 </mat-card-title>
                 <mat-card-subtitle class="text-center">
-                  Updated on (11/03/24, 9:53am EST)
+                  Updated on (11/13/24, 6:40pm EST)
                 </mat-card-subtitle>
 
                 <div class="timeline-container">
