Quality of life fixes

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -102,7 +102,7 @@
                   {{ season }} NHL Percentile Statistics
                 </mat-card-title>
                 <mat-card-subtitle class="text-center">
-                  Updated on (11/20/24, 1:57am EST)
+                  Updated on (11/21/24, 2:27pm EST)
                 </mat-card-subtitle>
 
                 <div class="timeline-container">
