four nations change

--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -102,7 +102,7 @@
                   {{ season }} NHL Percentile Statistics
                 </mat-card-title>
                 <mat-card-subtitle class="text-center">
-                  Updated on (11/27/24, 9:37am EST)
+                  Updated on (02/10/25, 6:46pm EST)
                 </mat-card-subtitle>
 
                 <div class="timeline-container">
