--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -102,7 +102,7 @@
                   {{ season }} NHL Percentile Statistics
                 </mat-card-title>
                 <mat-card-subtitle class="text-center">
-                  Updated on (02/10/25, 6:46pm EST)
+                  Updated on (04/18/25, 1:57am EST)
                 </mat-card-subtitle>
 
                 <div class="timeline-container">
